[package]
name = "build_exact"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.21"
petgraph = "0.6.0"
show-image = { version = "0.8.5", features = ["macros", "image"] }
image = "0.23.14"
